--- a/FRONTEND/src/app/module/admin/generic/generic-table.component.html
+++ b/FRONTEND/src/app/module/admin/generic/generic-table.component.html
@@ -9,7 +9,7 @@
 	<input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input />
 </mat-form-field>
 
-<div class="mat-elevation-z8">
+<div class="mat-elevation-z8" style="overflow-x: scroll;">
 	<table mat-table [dataSource]="dataSource" matSort multiTemplateDataRows>
 		@for (col of listProps; track $index) {
 		<ng-container matColumnDef="{{ displayedColumns[$index] }}">
