--- a/FRONTEND/src/app/module/admin/report/report.component.html
+++ b/FRONTEND/src/app/module/admin/report/report.component.html
@@ -2,7 +2,7 @@
 	<diV class="fs-4 w-100 text-center">VIEW REPORT</diV>
 	<div class="row g-0">
 		<div class="col-4 p-3 rounded-3 d-flex flex-column align-items-center">
-			<div class="d-flex flex-column align-items-center" style="margin-left: 30px; margin-right: 30px;"
+			<div class="d-flex flex-column align-items-center w-100" style="margin-left: 30px; margin-right: 30px;"
 				[formGroup]="this.formGroup">
 				<mat-form-field class="w-100">
 					<mat-label>Type</mat-label>
