--- a/FrontEnd/src/app/module/admin/admin.component.html
+++ b/FrontEnd/src/app/module/admin/admin.component.html
@@ -1,5 +1,6 @@
-<div class="layout d-flex py-3 px-3">
-	<div class="d-flex flex-column col-3 flex-shrink-0 p-3 text-white rounded" style="background-color: #5462b4">
+<div class="layout d-flex py-3 px-3 row">
+	<div class="d-flex flex-column col-12 col-md-3 flex-shrink-0 p-3 text-white rounded"
+		style="background-color: #5462b4">
 		<a href="/admin" class="d-flex align-items-center text-white text-decoration-none">
 			<span class="fs-4">Admin Dashboard</span>
 		</a>
@@ -30,7 +31,7 @@
 		</ul>
 		<hr />
 	</div>
-	<div class="p-3 col">
+	<div class="p-3 col-12 col-md-9">
 		<router-outlet></router-outlet>
 	</div>
 </div>
