--- a/FrontEnd/src/app/layout/header/header.component.html
+++ b/FrontEnd/src/app/layout/header/header.component.html
@@ -55,6 +55,7 @@
 	</mat-toolbar-row>
 
 	<mat-menu #menu="matMenu" xPosition="before" yPosition="below">
+		@if (_user){
 		<button mat-menu-item>
 			<i class="fa-solid fa-user"></i>
 			<span class="mx-5 align-right">Profile</span>
@@ -63,11 +64,14 @@
 			<i class="fa-solid fa-file"></i>
 			<span class="mx-5 align-right">CV manage</span>
 		</button>
+		}
 
+
+		@if(_user && _isNotRecruiter===true){
 		<button mat-menu-item (click)="handleRouteToRecruiterRegisterConsole()">
 			<i class="bi bi-person-fill-up fs-5"></i>
 			<span class="mx-5 align-right">Be A Recruiter</span>
-		</button>
+		</button>}
 
 		@if(_isAdmin===true){
 		<button mat-menu-item (click)="handleRouteToAdminConsole()">
@@ -76,10 +80,12 @@
 		</button>
 		}
 
+		@if (_user){
 		<button mat-menu-item>
 			<i class="fa-solid fa-gear"></i>
 			<span class="mx-5 align-right">Settings</span>
 		</button>
+		}
 
 		@if (_user != null) {
 		<button mat-menu-item (click)="handleClick_Logout()">
